force-app/main/default/objects/Insert__c/Insert__c.object-meta.xml
<CustomObject>
    <description>Used to track insert information of contacts</description>
    <label>Insert</label>
    <nameField>
        <label>Insert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inserts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>