force-app/main/default/objects/Insert__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link an insert with a contact</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Inserts</relationshipLabel>
    <relationshipName>Inserts</relationshipName>
    <type>Lookup</type>
</CustomField>