force-app/main/default/objects/Insert__c/fields/Insert_Type__c.field-meta.xml
<CustomField>
    <fullName>Insert_Type__c</fullName>
    <description
  >What type of insert is being used (Standard or Acoustic)</description>
    <label>Insert Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Acoustic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>