force-app/main/default/objects/Insert__c/fields/Type_is_acoustic__c.field-meta.xml
<CustomField>
    <fullName>Type_is_acoustic__c</fullName>
    <formula>TEXT( Insert_Type__c ) = &apos;Acoustic&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type is acoustic</label>
    <type>Checkbox</type>
</CustomField>