force-app/main/default/objects/Insert__c/fields/Type_is_standard__c.field-meta.xml
<CustomField>
    <fullName>Type_is_standard__c</fullName>
    <formula>(TEXT(Insert_Type__c) = &apos;Standard&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type is standard</label>
    <type>Checkbox</type>
</CustomField>