force-app/main/default/objects/Insert__c/fields/Window__c.field-meta.xml
<CustomField>
    <fullName>Window__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link an insert with the window it is a part of</description>
    <label>Window</label>
    <referenceTo>Window__c</referenceTo>
    <relationshipLabel>Inserts</relationshipLabel>
    <relationshipName>Inserts</relationshipName>
    <type>Lookup</type>
</CustomField>